--- a/src/UI/Presentation/Components/_Imports.razor
+++ b/src/UI/Presentation/Components/_Imports.razor
@@ -8,3 +8,11 @@
 @using Microsoft.JSInterop
 @using BlazorChat
 @using BlazorChat.Core.Domain.Entities
+@using System.Net.Http
+@using System.Net.Http.Json
+@using Microsoft.AspNetCore.Components.Forms
+@using Microsoft.AspNetCore.Components.Routing
+@using Microsoft.AspNetCore.Components.Web
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
+@using Microsoft.AspNetCore.Components.Web.Virtualization
+@using Microsoft.JSInterop
